--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,11 @@
         "dest": "index.js",
         "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
       }
-    ]
+    ],
+    "functions": {
+      "api/*": {
+        "maxDuration": 10
+      }
+    }
   }
+  
